# top-hat-image-compressor

./: package.json  vite.config.ts
.github/workflows/: main.yml
src/: App.vue  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
